fixed overflow

--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@
   font-style: normal;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
+  position: relative;
   box-sizing: border-box;
   font-family: "Inter";
   font-size: 16px;
